--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://github.com/hnguyen1179/dukenguyen.dev",
+  "homepage": "dukenguyen.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
