fixed homepage, fixed logo margins

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "dukenguyen.dev",
+  "homepage": "http://www.dukenguyen.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
