--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
+    "querystring": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal-image": "^2.5.0",
