--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "gh-pages": "^3.1.0",
     "querystring": "^0.2.1",
     "react": "^17.0.1",
